traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:23: error: not found: value critMessage
        critMessage(cpt)
        ^